# httpc

./: .gitignore  Cargo.toml  Dockerfile  Enhancement.md  LICENSE  Makefile  README.md  REPL.md  cleanup_and_automate.sh  clippy.toml  deny.toml  fix_clippy.sh  profile.example  profiles.example  release.sh  rustfmt.toml
.github/: CACHE_REFRESH.md  CONTRIBUTORS_REFRESH.md  copilot-instructions.md
.github/instructions/: general.instructions.md
.github/workflows/: ci.yml  create-release.yml  release.yml
archive/: http.rs
debian/: postinst
docs/: COST_OPTIMIZATION.md  RELEASE_PROCESS.md  RELEASE_SETUP.md  REPL.md  SECURITY.md
scripts/: deb-postinstall.sh  fix-lint.sh  setup-profile.sh  setup-profiles.bat  setup-profiles.ps1  setup-profiles.sh
src/: args.rs  cmd.rs  decoder.rs  encoder.rs  http.rs  ini.rs  lib.rs  main.rs  profile.rs  repl.rs  stash.rs  stdio.rs  url.rs  utils.rs
src/args/: cmd.rs  ini.rs
tests/: integration_tests.rs
