[package]
name = "webly"
version = "0.1.12"
authors = ["Satoshi Iizuka <satoshi.iizuka@elastic.co>"]
description = "A lightweight, profile-based HTTP client"
edition = "2021"
license = "Elastic-2.0"
repository = "https://github.com/samwisely75/webly"
homepage = "https://github.com/samwisely75/webly"
readme = "README.md"
keywords = ["http", "client", "cli", "curl", "api"]
categories = ["command-line-utilities", "web-programming::http-client"]

# Package metadata for deb/rpm generation
[package.metadata.deb]
maintainer = "Satoshi Iizuka"
copyright = "2025, Satoshi Iizuka"
extended-description = "A fast, modern HTTP client with profile-based configuration for the command line. Think of it as curl with persistent profiles and simplified syntax."
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/webly", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/webly/", "644"],
]

[package.metadata.generate-rpm]
license = "Elastic-2.0"
summary = "A lightweight, profile-based HTTP client"
post_install_script = """echo "Setting up webly..."
echo "Webly installed successfully!"
echo "See documentation: https://github.com/samwisely75/webly\""""
assets = [
    { source = "target/release/webly", dest = "/usr/bin/webly", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/webly/README.md", mode = "644" },
]

[dependencies]
anyhow = "1.0"
flate2 = "1.1.0"
reqwest = { version = "0.12.12", features = ["rustls-tls", "blocking", "json"], default-features = false }
tokio = { version = "1.44.0", features = ["full"] }
clap = { version = "4.5.28", features = ["derive"] }
rust-ini = "0.21.1"
shellexpand = "3.1.0"
zstd = "0.13.3"
tempfile = "3.19.1"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "chrono", "env-filter" ] }
encoding_rs = "0.8.35"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

